# modular-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  config.py  const.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml
ModularBot/: __init__.py  activities.py  auto_react.py  command.py  player.py  prayers.py  util.py
ModularBot/command/: __init__.py  administrator.py  multimedia.py  playground.py
ModularBot/player/: __init__.py  base_player.py  interfaces.py  player.py  util_player.py  view.py
